form fix on iphone 11 max

--- a/app/assets/stylesheets/pages/_forms.scss
+++ b/app/assets/stylesheets/pages/_forms.scss
@@ -41,7 +41,7 @@
   color: white;
   display: flex;
   justify-content: center;
-  height: 80vh;
+  height: 65vh;
   min-height: 400px;
 }
 
